# clotter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  blocks.c  colorbars.c  drawplot.c
src/: CMakeLists.txt  array_helpers.c  array_helpers.h  blocks.c  check  check.c  colorbars.c  colors.c  constants.h  countplot.c  countplot.h  csv2data.c  csv2data.h  data_handling.c  data_handling.h  data_types.c  data_types.h  main.c  test  test.c
test/: CMakeLists.txt  test.csv  test_count_row_length.c  test_count_rows.c  test_countplot.c  test_ct.c  test_datatypes.c  test_max.c  test_max_scalar.c  test_mean.c  test_min.c  test_range.c
test/test_csvs/: negative_num.csv
